--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,14 +5,14 @@ androidx-appcompat = "1.4.2"
 androidx-core = "1.8.0"
 com-squareup-moshi = "1.13.0"
 compose = "1.2.1"
-compose-compiler = "1.3.0"
+compose-compiler = "1.4.0-alpha02"
 compose-material3 = "1.1.0-alpha02"
 # KotlinX
 coroutines = "1.6.4"
 # Core
 koin = "3.2.0"
-kotlin = "1.8.0-Beta"
-kotlin-ksp = "1.8.0-Beta-1.0.8"
+kotlin = "1.7.22"
+kotlin-ksp = "1.7.22-1.0.8"
 #Screenshot testing
 paparazzi = "1.0.0"
 #Retrofit
